exports[`test Box renders correctly 1`] = `
<div
  className="a b c d e f g">
  some text inside box component
</div>
`;

exports[`test Box renders correctly as button 1`] = `
<button
  className="a b c d e f g">
  some text inside button
</button>
`;

exports[`test Box renders correctly with set styling 1`] = `
<div
  className="a b c d e f g h i j k l m n o p">
  some text inside box component
</div>
`;
